--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,10 +36,10 @@ spring:
   datasource: 
      driver-class-name: ${DB_DRIVER:com.mysql.cj.jdbc.Driver}
      #url: jdbc:${DB_TYPE:mysql}://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_SCHEMA:shopifyme-customers}
-     url: jdbc:${DB_TYPE:mysql}://${DB_HOST:weshopify-platform-db.ccemvxjoftl8.ap-south-1.rds.amazonaws.com}:${DB_PORT:3306}/${DB_SCHEMA:weshopify_app}
+     url: jdbc:${DB_TYPE:mysql}://${DB_HOST:weshopify-platform-db.cs0zbh5zdav3.ap-south-1.rds.amazonaws.com}:${DB_PORT:3306}/${DB_SCHEMA:weshopify_app}
      username: ${DB_USER_NAME:root} 
      #password: ${DB_USER_PASSWORD:root}
-     password: ${DB_USER_PASSWORD:Adance123$}
+     password: ${DB_USER_PASSWORD:Rahul_251089}
   jpa: 
     hibernate: 
        ddl-auto: update
